# TyriaExtractor

./: .gitignore  AGENTS.md  Cargo.toml  GWDAT_INVESTIGATION_JOURNAL.md  LICENSE  README.md  logo.xcf  package.json
.github/workflows/: ci.yml
crates/tyria_injector/: Cargo.toml
crates/tyria_injector/src/: main.rs  windows.rs
crates/tyria_sniffer/: Cargo.toml
crates/tyria_sniffer/src/: lib.rs  packet.rs  win32_dll.rs
crates/tyria_sniffer/src/win32_dll/: hooks.rs  output.rs
doc/: DECOMPRESSION.md  GWDAT_FORMAT.md  ITEM_EXTRACTION.md  NPC_AND_VENDOR_EXTRACTION.md  QUEST_EXTRACTION.md  README.md  SKILL_EXTRACTION.md
examples/: tyria_items.jsonl  tyria_items_regression.jsonl
src/: atex.rs  capture.rs  cli.rs  dat.rs  file_ref.rs  gw_dat_decompress.rs  icon_payload.rs  images.rs  io_util.rs  items.rs  lib.rs  main.rs  models.rs  npcs.rs  pe.rs  quests.rs  skills.rs  tests.rs  text.rs  text_records.rs  vendors.rs  workflows.rs
src/atex/: decompress.rs  dxt.rs
src/items/: icons.rs  runtime.rs
src/items/runtime/: capture.rs  catalog.rs  tests.rs  text.rs
src/quests/: capture.rs  catalog.rs  packets.rs  tests.rs
src/skills/: extraction.rs  icons.rs  table.rs
src/tests/: cli.rs  dat.rs  items.rs  mod.rs  text.rs  textures.rs
src/text/: catalog.rs  tests.rs
src/vendors/: capture.rs  catalog.rs  tests.rs
tests/: cli.rs
tests/fixtures/: item_async_decode_corpus.jsonl
tools/: extract.ts  validate_items_catalog.py
