[package]
name = "tyria-extractor-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]
members = [
    ".",
    "crates/tyria_injector",
    "crates/tyria_sniffer",
]
resolver = "2"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

